<resources>
    <string name="app_name">AndroidClass</string>
    <string name="firstfragment">FirstFragment</string>
    <string name="secondfragment">SecondFragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="successfully_updated">Successfully updated</string>

    <string name="input_field_error_password_empty">Password cannot be empty</string>
    <string name="input_field_error_username_empty">Username cannot be empty</string>
    <string name="input_field_error_password_invalid">Password length must be in range %1$d..%2$d</string>
    <string name="input_field_error_username_invalid">Username length must be in range %1$d..%2$d</string>

    <string name="auth_error_user_does_not_exist">User with this username does not exist</string>
    <string name="auth_error_user_already_exists">User with this username already exists</string>
    <string name="auth_error_wrong_password">Wrong password</string>

    <string name="auth_success_system_message">Successful signup</string>
    <string name="account_info">Account info</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="setting_1">Setting 1</string>
    <string name="setting_2">Setting 2</string>
    <string name="setting_3">Setting 3</string>
    <string name="edit">Edit</string>
</resources>
